DASH-28 - Format and instrument dashboard, first pass
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312852 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -1,239 +1,127 @@
 /* zero out */
-body, #mastHead, #mastHead ul, #toolMenuWrap ul, h1 {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-
-a {
-    text-decoration: none;
-}
-
-#mastHead {
-    background-image: url(img/nav.png);
-    background-repeat: repeat-x;
-    height: 38px;
-    padding-left: 20px;
-    min-width: 900px;
-}
-
-#mastHead ul {
-    list-style-type: none;
-}
-
-#mastHead ul li {
-    float: left;
-    padding: 10px 15px;
-    height: 38px;
-}
-
-#mastHead ul li:hover, #mastHead ul li.selected {
-    background-image: url(img/nav-hover.png);
-    background-repeat: repeat-x;
-    color: #FFF;
-}
-
-#mastHead ul li.edit:hover {
-    background-image: url(img/nav.png);
-    display: block;
-    color: blue;
-    text-decoration: underline;
-}
-
-#mastLogin {
-    float: right;
-}
-
-.skip {
-    display: none;
-}
-
-h3{
-    margin:0;
-    padding:.5em 0;
-    color:#555;
-}
-#container {
-    padding: 20px;
-}
-#content{
-    padding-left:13em;
-}
-#message {
-    background-image: url(img/close.png);
-    background-repeat: no-repeat;
-    background-position: 99% 4%;
-    background-color: #d4e1ff;
-    padding: 10px;
-    border-radius: 8px;
-    width: 840px;
-    margin-bottom:10px;
-}
-
-#message h1 {
-    font-size: 14px;
-    color: #333;
-}
-
-#message h2 {
-    font-size: 13px;
-    text-transform: uppercase;
-}
-
-#message p {
-    width: 80%;
-}
-
-#footer {
-    margin-top: 10px;
-    clear: both;
-    margin-left: 160px;
-    text-align: center;
-    width: 860px;
-    padding: 10px;
-}
-
-#footer #footerLinks {
-    padding: 10px;
-    height: 15px;
-}
-
-#footer #footerLinks li {
-    display: inline;
-    list-style-type: none;
-    font-size: 11px;
-    text-transform: uppercase;
-    margin-right: 10px;
-}
-
-#footer #footerLinks li a {
-    color: #666;
-}
-
-#footer #footerLinks li a:hover {
-    text-decoration: underline;
-}
-
-#footerExtNav {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-#footerInfo {
-    margin-top: 10px;
-    font-size: 11px;
-    color: #999;
-}
-
-#toolMenuWrap {
-    margin-bottom: 10px;
-    width: 140px;
-    float: left;
-    padding-left: 10px;
-}
-
-#toolMenu li {
-    line-height: 18px;
-    font-size: 13px;
-    list-style-type: none;
-}
-
-#toolMenu li a {
-    color: #666;
-}
-
-#toolMenu li a:hover {
-    text-decoration: underline;
-}
-
-.edit {
-    color: #FFF;
-}
-
 table {
     margin: 10px 0px;
--webkit-border-top-left-radius: 10px;
--webkit-border-top-right-radius: 10px;
--moz-border-radius-topleft: 10px;
--moz-border-radius-topright: 10px;
-border-top-left-radius: 10px;
-border-top-right-radius: 10px;
-    border: 1px solid #eee;
     width: 860px;
     background-color: #eee;
+    float:none;
+    clear:both
 }
 
 table tr {
+    border:1px solid #fff;
+}
+
+.focusedRow:hover td{
+    border-top:1px solid #555;
+    border-bottom:1px solid #555;
+}
+table tr.even {
+    background: #fff
 }
 
 table tr td {
     margin: 0;
     padding: 5px;
+    border-top:1px solid #eee;
+    border-bottom:1px solid #eee;
 }
-table tr td  a{
-    color:#003399
+
+table tr.even td {
+    border-top:1px solid #fff;
+    border-bottom:1px solid #fff;
 }
-table tr td.newsTitle{
-    color: #666
+
+table tr td a {
+    color: #003399
 }
+
+
 table tr td.action {
-    width:17px;
-    }
-table tr.header {
-    text-transform: uppercase;
-    font-weight: bold;
+    width: 17px;
 }
-table thead th{
+
+table thead th {
     padding: 5px;
-    text-align:left
-}
-table thead{
-    position:absolute;
-    top:-1000px;
-
-}
-table tr.alt {
-    background-color: #FFF;
+    text-align: left
 }
 
-table tr.schedItem:hover{
-    background:#ccc
+table thead {
+    position: absolute;
+    left: -10000px; /*render off viewport*/
 }
-.actionPanelTrig{
+
+table tr:hover {
+    background: #d9d9d9
+}
+h3.withNav{
+    float:left;
+    margin:10px 0 0 0;
+    padding-top:5px;
+}
+.pager{
+    margin:10px 0 0 0;
+    padding: 3px;
+    width: 860px;
+    color:#aaa;
     text-align:right;
 }
-.actionPanelTrig a{
-    display:block;
-    width:16px;
-    height:16px;
-    background: transparent url(img/down.png)  right top no-repeat;
+.pager > a, .pager > span{
+    padding:0 5px;
+    text-align:center;
+    margin:2px;
+    border:1px solid #ccc;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
-.actionPanel{
-    list-style:none;
-    margin:0;
-    padding:0;
-    border:1px solid #aaa;
-    background:#777;
-    font-size:80%
+.pager > span.linky, .pager > a{
+    background:#eee;
+    color:#666
+}
+.pager > span.linky:hover, .pager > a:hover{
+    border:1px solid #555;
+    background:#333;
+    color:#fff;
+}
+.pager > span.linky:hover a{
+    color:#fff;
+}
+.pager a{
+    text-decoration:none;
 }
 
-.actionPanel li{
-    margin:0;
-    padding:0;
+.actionPanelTrig {
+    text-align: right;
 }
-.actionPanel li a{
-    display:block;
-    padding:5px;
-    color:#fff
+
+.actionPanelTrig a {
+    display: block;
+    width: 16px;
+    height: 16px;
+    background: transparent url(img/down.png) right top no-repeat;
 }
-.actionPanel li a:hover{
-    display:block;
-    padding:5px;
-    color:#777;
-    background:#fff
+
+.actionPanel {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #aaa;
+    background: #fff;
+    font-size: 100%
+}
+
+.actionPanel li {
+    margin: 0;
+    padding: 0;
+}
+
+.actionPanel li a {
+    display: block;
+    text-decoration:none;
+    padding: 5px;
+}
+
+.actionPanel li a:hover {
+    padding: 5px;
+    background: #eee;
+    text-decoration:none;
 }
