DASH-30 - instrument assignment details in modal window
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312864 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -125,3 +125,16 @@ h3.withNav{
     background: #eee;
     text-decoration:none;
 }
+.smallDiag{font-size:90% !important}
+#metaDataMain,#metaDataGradSub,#description,#link{
+    padding:5px 0;
+}
+#metaDataGradSub{
+    font-size:90%    
+}
+#description{
+    
+}
+#link{
+    text-align:right;
+}
