DASH-30 - handle announcements, loading access fragments
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312868 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -126,6 +126,12 @@ h3.withNav{
     text-decoration:none;
 }
 .smallDiag{font-size:90% !important}
+.smallDiag h1{
+    display:none
+}
+.smallDiag table{
+    width:auto
+}
 #metaDataMain,#metaDataGradSub,#description,#link{
     padding:5px 0;
 }
