DASH-34 - intercept and reformat access/annuncement preview
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312873 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -126,25 +126,26 @@ h3.withNav{
     text-decoration:none;
 }
 .smallDiag{font-size:90% !important}
-.smallDiag h1{
-    display:none
-}
 .smallDiag table{
-    width:auto
+    width:auto;
 }
+.smallDiag table td{
+    padding:1px;
+}    
 #metaDataMain,#metaDataGradSub,#description,#link{
     padding:5px 0;
 }
 #metaDataGradSub{
     font-size:90%    
 }
-#description{
-    
-}
 #link{
     text-align:right;
 }
 
+ul.attachList li{
+    background:transparent url(../../../../library/image/sakai/attachments.gif) center left no-repeat; 
+    padding-left:20px;
+}
 
 /*file listings*/
 
