DASH-46 - render labels if they exist for data of unknown type
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312900 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -196,7 +196,7 @@ h3.withNav {
     outline:
 }
 
-.metadataLine {
+.metadataLine,.unknownType {
     font-size: 100%;
     font-weight:bold;
     list-style:none;
@@ -206,7 +206,7 @@ h3.withNav {
     padding-right:5px;
     }
 
-.metadataLine em{
+.metadataLine em, .unknownType em{
      font-style:normal;
      font-weight:normal;
  }   
