DASH-85 - provide an item type agnostic renderer to item metadata
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@312973 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -215,7 +215,8 @@ h3.withNav {
     margin-top:5px;
     border-top:1px solid #ccc;
 }
-.moreInfo {
+ul.moreInfo {
+    list-style:none;
     position:absolute;
     top:15px;
     right:10px;
