DASH-104 - display a message to user on hiding items
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313005 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -430,3 +430,19 @@ ul.tabPanel{
 .panel{
     padding:5px;
 }
+#messagePanel{
+    position:absolute;
+    top:29px;
+    left:30%;
+    right:30%;
+    width:400px;
+    margin:auto;
+    padding:5px 10px;
+    background:#9cf;
+    -webkit-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
