DASH-101 - add needed rendering for labels, some adjustments
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313010 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -124,7 +124,9 @@ h3.withNav {
     text-align: right;
     margin:0;
 }
-
+.itemCount+span.pager{
+    padding-left:20px;
+}
 .pager > a, .pager > span {
     padding: 0 5px;
     text-align: center;
@@ -256,13 +258,14 @@ a.itemLink {
     padding-left: 21px;
     background: url(../../../../library/image/sakai/generic.gif) center left no-repeat;
 }
-div.titleModLabel{
+.dashboardLabel{
+    display:block;
     color:#555;
     font-size:.9em;
     float:left;
     padding:5px 5px 0 0px;
 }
-div.titleModLabel:before{
+.dashboardLabel:before{
     content:" - ";
 }
 a.assignment-icon{
