DASH-97 - rearrange tab panel to give more room for pager
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313020 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -124,6 +124,9 @@ h3.withNav {
     text-align: right;
     margin:0;
 }
+.itemCount{
+    font-size:80%
+}
 .itemCount+span.pager{
     padding-left:20px;
 }
